--- a/app/src/main/res/layout/activity_request_main.xml
+++ b/app/src/main/res/layout/activity_request_main.xml
@@ -34,4 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="发消息"/>
+
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="老师退出"/>
 </LinearLayout>
